--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,8 @@ plugins {
     id 'com.google.relay' version '0.3.05'
     id 'com.google.dagger.hilt.android'
     id 'kotlin-kapt'
+    id("com.google.gms.google-services")
+
 }
 
 android {
@@ -83,6 +85,8 @@ dependencies {
     androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
     debugImplementation 'androidx.compose.ui:ui-tooling'
     debugImplementation 'androidx.compose.ui:ui-test-manifest'
+    implementation(platform("com.google.firebase:firebase-bom:32.0.0"))
+    implementation("com.google.firebase:firebase-auth-ktx")
 }
 
 // Allow references to generated code
